<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/ic_menu_classes"
            android:title="@string/menu_classes" />
        <item
            android:id="@+id/nav_snapshots"
            android:icon="@drawable/ic_menu_snapshots"
            android:title="@string/menu_snapshots" />
        <item
            android:id="@+id/nav_cameras"
            android:icon="@drawable/ic_menu_cameras"
            android:title="@string/menu_cameras" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_statistic"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>