<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_classes">

    <fragment
        android:id="@+id/nav_classes"
        android:name="com.example.videocamerasdisplayapp.ui.classes.ClassesFragment"
        android:label="@string/menu_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/nav_snapshots"
        android:name="com.example.videocamerasdisplayapp.ui.snapshots.SnapshotsFragment"
        android:label="@string/menu_snapshots"
        tools:layout="@layout/fragment_snapshots" />

    <fragment
        android:id="@+id/nav_cameras"
        android:name="com.example.videocamerasdisplayapp.ui.cameras.CamerasFragment"
        android:label="@string/menu_cameras"
        tools:layout="@layout/fragment_cameras" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.example.videocamerasdisplayapp.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.videocamerasdisplayapp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>