<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/page_content_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_class_title"
        android:textAlignment="center"
        android:textSize="@dimen/h2"
        android:textStyle="bold"
        android:textColor="?attr/colorAccent"
        android:layout_marginTop="@dimen/h2_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/field_margin">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_page_name_label"
            android:textSize="@dimen/p"
            android:textColor="?attr/colorAccent"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:labelFor="@+id/name_label"
            android:hint="@string/class_page_name_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/field_margin">

        <TextView
            android:id="@+id/label_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_page_label_label"
            android:textSize="@dimen/p"
            android:textColor="?attr/colorAccent"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/label_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="numberSigned"
            android:labelFor="@+id/label_label"
            android:hint="@string/class_page_label_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/field_margin">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_page_title_label"
            android:textSize="@dimen/p"
            android:textColor="?attr/colorAccent"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/title_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:labelFor="@+id/title_label"
            android:hint="@string/class_page_title_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/field_margin"
        android:gravity="start|center_vertical">

        <TextView
            android:id="@+id/color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_page_color_label"
            android:textSize="@dimen/p"
            android:textColor="?attr/colorAccent"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/color_display_margin" />

        <LinearLayout
            android:id="@+id/color_picker"
            android:layout_width="@dimen/color_display_size"
            android:layout_height="@dimen/color_display_size"
            android:background="@color/black"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/field_margin"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:backgroundTint="?attr/colorOnPrimary"
            android:textColor="?attr/colorAccent"
            app:strokeColor="?attr/colorAccent"
            app:strokeWidth="@dimen/secondary_button_stroke_width"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/button_margin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_class_text"
            app:strokeColor="?attr/colorAccent"
            android:textColor="?attr/colorAccent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>